--- a/Tools/GenerateAst/GenerateAst.csproj
+++ b/Tools/GenerateAst/GenerateAst.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EF64C193-0E6D-4B35-938C-9332D58149A9}</ProjectGuid>
+    <ProjectGuid>{26410FC7-3EC0-4C5E-BFA7-72E84860EF85}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LoxSharp</RootNamespace>
-    <AssemblyName>LoxSharp</AssemblyName>
+    <RootNamespace>GenerateAst</RootNamespace>
+    <AssemblyName>GenerateAst</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,12 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expr.cs" />
-    <Compile Include="LoxSharp.cs" />
+    <Compile Include="GenerateAst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scanner.cs" />
-    <Compile Include="Token.cs" />
-    <Compile Include="TokenType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
