Chapter 7 of Crafting Interpreters

--- a/LoxSharp/LoxSharp.csproj
+++ b/LoxSharp/LoxSharp.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AstPrinter.cs" />
+    <Compile Include="errors\RuntimeError.cs" />
     <Compile Include="Expr.cs" />
+    <Compile Include="Interpreter.cs" />
     <Compile Include="LoxSharp.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
