Chapter 8 of Crafting Interpreters

--- a/LoxSharp/LoxSharp.csproj
+++ b/LoxSharp/LoxSharp.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AstPrinter.cs" />
+    <Compile Include="ast\Stmt.cs" />
+    <Compile Include="LoxEnvironment.cs" />
     <Compile Include="errors\RuntimeError.cs" />
-    <Compile Include="Expr.cs" />
+    <Compile Include="ast\Expr.cs" />
     <Compile Include="Interpreter.cs" />
     <Compile Include="LoxSharp.cs" />
     <Compile Include="Parser.cs" />
