Chapter 12 of Crafting Interpreters

--- a/LoxSharp/LoxSharp.csproj
+++ b/LoxSharp/LoxSharp.csproj
@@ -48,15 +48,18 @@
     <Compile Include="src\functions\Clock.cs" />
     <Compile Include="src\functions\LoxFunction.cs" />
     <Compile Include="src\functions\_LoxCallable.cs" />
+    <Compile Include="src\LoxClass.cs" />
     <Compile Include="src\LoxEnvironment.cs" />
     <Compile Include="src\exceptions\RuntimeError.cs" />
     <Compile Include="src\ast\Expr.cs" />
     <Compile Include="src\Interpreter.cs" />
+    <Compile Include="src\LoxInstance.cs" />
     <Compile Include="src\LoxSharp.cs" />
     <Compile Include="src\Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Resolver.cs" />
     <Compile Include="src\Scanner.cs" />
+    <Compile Include="src\StackList.cs" />
     <Compile Include="src\Token.cs" />
     <Compile Include="src\TokenType.cs" />
     <Compile Include="src\Utils.cs" />
